# AI-Powered-CRO-Audit-

backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  alembic.ini  pyproject.toml  reference_code.py  setup.cfg
backend/.ebextensions/: poetry.config
backend/alembic/: env.py
backend/alembic/versions/: d46ac01b975d_initial_tables.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  routes.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  cro_audit.py  user.py
backend/app/controllers/: __init__.py  auth_controller.py  user_controller.py
backend/app/core/: db.py  middlewares.py
backend/app/core/config/: __init__.py  application.py  aws.py  cache.py  database.py  email.py  logging.py  security.py
backend/app/core/exceptions/: __init__.py  base.py  handlers.py  http.py
backend/app/core/monitoring/: __init__.py  decorators.py  middleware.py  sentry.py
backend/app/core/security/: dependencies.py  security.py
backend/app/models/domain/: __init__.py  auth.py  profile.py  reset_password.py  user.py  validators.py
backend/app/repositories/: __init__.py  profile_repository.py  reset_password_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  base.py  profile.py  reset_password.py  user.py
backend/app/services/: auth_service.py  cro_audit_service.py  user_service.py
backend/app/templates/email/: magic_link.html  magic_link.txt  reset_password.html  reset_password.txt
backend/app/utilities/: email_utility.py
frontend/: index.html  package-lock.json  package.json  reference_code.jsx
frontend/src/: App.css  App.jsx  CROCalculator.jsx  index.css
